Revise terms and conditions in footer
Updated terms and conditions for the Valentine unit with new clauses on service scope, liability limitations, force majeure, data privacy, and termination.

--- a/index.html
+++ b/index.html
@@ -199,7 +199,15 @@
     </div>
 
     <div class="footer">
-        TERMS AND CONDITIONS (V2.0): This Valentine unit is provided as-is without warranty. Liability is limited to the cost of one high-quality dinner or the production of one custom EDM track. The candidate is exempt from performance in the event of force majeure, including localized power outages or a shortage of high-quality pizza. All inside jokes are protected by end-to-end brain-to-heart encryption. This agreement may be terminated if C.H.T.R. scores drop below safety thresholds, though a soft reboot via chocolate is permitted.
+        1. Scope of Service. This Valentine unit is provided as-is without warranty of any kind, either expressed or implied. The developer is not liable for any sudden onset of laughter, excessive piano serenades, or accidental Victory Royales in Fortnite.
+
+        2. Liability Limitations. Liability is strictly limited to the cost of one high-quality dinner or the production of one custom Lo-Fi track. Under no circumstances shall the candidate be held responsible for "Dad Jokes" that result in temporary eye-rolling from the recipient.
+
+        3. Force Majeure. The candidate is exempt from performance obligations in the event of a localized power outage, a critical server failure, or a significant shortage of high-quality pizza in the immediate geographic area.
+
+        4. Data Privacy. All shared secrets and inside jokes are protected by end-to-end brain-to-heart encryption. The candidate does not sell user data to third parties, including but not limited to ex-partners or annoying moderators.
+
+        5. Termination Clause. This agreement may be terminated by either party if the C.H.T.R. score drops below the minimum safety threshold of 10 out of 16. However, a "Soft Reboot" may be attempted through the application of chocolate or new tech gadgets.
     </div>
 </div>
 
